[DBG] debug colorscale

--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -291,6 +291,8 @@
                                 case "label":
                                     var color = d3.scaleOrdinal(d3.schemeCategory20);
                                     var color2 = d3.scaleOrdinal(d3.schemeCategory20b);
+                                    console.log(color);
+                                    console.log(color2);
                                     break;
                                 case "time":
                                     var T = d3.max(cvalues, function(d) {
