[DBG] fix canvas_width

--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -299,6 +299,7 @@
                                         return d[0];
                                     });
                                     var color = d3.scaleSequential(d3.schemeRdBu[T]);
+                                    console.log(color);
                                     break;
                             }
 
@@ -384,14 +385,14 @@
 
                             // draw legend colored rectangles
                             legend.append("rect")
-                                .attr("x", width - 18)
+                                .attr("x", canvas_width - 18)
                                 .attr("width", 18)
                                 .attr("height", 18)
                                 .style("fill", color);
 
                             // draw legend text
                             legend.append("text")
-                                .attr("x", width - 24)
+                                .attr("x", canvas_width - 24)
                                 .attr("y", 9)
                                 .attr("dy", ".35em")
                                 .style("text-anchor", "end")
