[DBG] fix undefined default in switch color

--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -301,6 +301,8 @@
                                     var color = d3.scaleSequential(d3.schemeRdBu[T]);
                                     console.log(color);
                                     break;
+                                default:
+                                    var color = null;
                             }
 
                             // console.log(dataset);
