--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -314,29 +314,11 @@
 
                             // Create scale functions
                             xScale = d3.scaleLinear() // xScale is width of graphic
-                                .domain(function(i) {
-                                    var min = d3.min(dataset, function(d) {
-                                    return d[0];
-                                }),
-                                    max = d3.max(dataset, function(d) {
-                                    return d[0];
-                                });
-                                    var buffer = 0.05 * (max - min);
-                                    return [min - buffer, max + buffer];
-                                })
+                                .domain(getAxis(dataset,0))
                                 .range([padding, canvas_width - padding * 2]); // output range
 
                             yScale = d3.scaleLinear() // yScale is height of graphic
-                                .domain(function(i) {
-                                    var min = d3.min(dataset, function(d) {
-                                    return d[1];
-                                }),
-                                    max = d3.max(dataset, function(d) {
-                                    return d[1];
-                                });
-                                    var buffer = 0.05 * (max - min);
-                                    return [min - buffer, max + buffer];
-                                })
+                                .domain(getAxis(dataset,1))
                                 .range([canvas_height - padding, padding]); // remember y starts on top going down so we flip
 
                             // Define X axis
@@ -432,26 +414,8 @@
                                     console.log(dataset);
 
                                     // Update scale domains
-                                    xScale.domain(function(i) {
-                                    var min = d3.min(dataset, function(d) {
-                                    return d[0];
-                                }),
-                                    max = d3.max(dataset, function(d) {
-                                    return d[0];
-                                });
-                                    var buffer = 0.05 * (max - min);
-                                    return [min - buffer, max + buffer];
-                                });
-                                    yScale.domain(function(i) {
-                                    var min = d3.min(dataset, function(d) {
-                                    return d[1];
-                                }),
-                                    max = d3.max(dataset, function(d) {
-                                    return d[1];
-                                });
-                                    var buffer = 0.05 * (max - min);
-                                    return [min - buffer, max + buffer];
-                                });
+                                    xScale.domain(getAxis(dataset,0));
+                                    yScale.domain(getAxis(dataset,1));
 
                                     // Update circles
                                     svg.selectAll("circle")
@@ -583,6 +547,17 @@
 
                     // });
                     }
+
+function getAxis(dataset, dim) {
+                                    var min = d3.min(dataset, function(d) {
+                                    return d[dim];
+                                }),
+                                    max = d3.max(dataset, function(d) {
+                                    return d[dim];
+                                });
+                                    var buffer = 0.05 * (max - min);
+                                    return [min - buffer, max + buffer];
+                                }
 
 
                     function pcaTDAGraph() {
