--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -289,8 +289,8 @@
 
                             switch (document.querySelector('input[name="color"]:checked').value) {
                                 case "label":
-                                    var color = d3.scaleOrdinal(d3.schemeCategory20);
-                                    var color2 = d3.scaleOrdinal(d3.schemeCategory20b);
+                                    var color = d3.scaleOrdinal.range(d3.schemeCategory20);
+                                    var color2 = d3.scaleOrdinal.range(d3.schemeCategory20b);
                                     console.log(color);
                                     console.log(color2);
                                     break;
@@ -298,7 +298,7 @@
                                     var T = d3.max(cvalues, function(d) {
                                         return d[0];
                                     });
-                                    var color = d3.scaleSequential(d3.schemeRdBu[T]);
+                                    var color = d3.scaleSequential.range(d3.schemeRdBu[T]);
                                     console.log(color);
                                     break;
                                 default:
@@ -345,13 +345,13 @@
                                     return yScale(d[1]);
                                 })
                                 .attr("r", 2) // radius
-                                .style("fill", function(d) {
+                                .style("fill", function(d,i) {
                                     if (document.querySelector('input[name="color"]:checked').value == "none") {
                                         return "black";
-                                    } else if (d >= 20) {
-                                        return color2(cvalues[d]-20);
+                                    } else if (cvalues[i] >= 20) {
+                                        return color2(cvalues[i]-20);
                                     } else {
-                                        return color(cvalues[d]);
+                                        return color(cvalues[i]);
                                     }
                                 });
 
@@ -411,7 +411,7 @@
                                         var newNumber2 = parseFloat(data.data[i].emb[1]);
                                         dataset.push([newNumber1, newNumber2]); // Add new number to array
                                     }
-                                    console.log(dataset);
+                                    // console.log(dataset);
 
                                     // Update scale domains
                                     xScale.domain(getAxis(dataset,0));
@@ -444,13 +444,13 @@
                                                 .attr("fill", "black") // Change color
                                                 .attr("r", 2); // Change radius
                                         }) // radius
-                                        .style("fill", function(d) {
+                                        .style("fill", function(d,i) {
                                             if (document.querySelector('input[name="color"]:checked').value == "none") {
                                                 return "black";
-                                            } else if (d >= 20) {
-                                                return color2(cvalues[d]-20);
+                                            } else if (cvalues[i] >= 20) {
+                                                return color2(cvalues[i]-20);
                                             } else {
-                                                return color(cvalues[d]);
+                                                return color(cvalues[i]);
                                             }
                                         });
 
