--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -291,8 +291,8 @@
 
                             switch (document.querySelector('input[name="color"]:checked').value) {
                                 case "label":
-                                    var color = d3.scaleOrdinal(d3.schemeCategory20);
-                                    var color2 = d3.scaleOrdinal(d3.schemeCategory20b);
+                                    var color = d3.scaleOrdinal().domain(cvalues).range(d3.schemeCategory20);
+                                    var color2 = d3.scaleOrdinal().domain(cvalues).range(d3.schemeCategory20b);
                                     // console.log(color);
                                     // console.log(color2);
                                     break;
@@ -300,7 +300,8 @@
                                     var T = d3.max(cvalues, function(d) {
                                         return d[0];
                                     });
-                                    var color = d3.scaleSequential(d3.schemeRdBu[T]);
+                                    console.log(T);
+                                    var color = d3.scaleSequential().domain(cvalues).range(d3.schemeRdBu[T]);
                                     console.log(color(1));
                                     console.log(color(2));
                                     console.log(color(0));
