--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -20,6 +20,7 @@
 
     <!-- <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script> -->
     <script src="../../js/d3.js"></script>
+    <script src="../../js/d3-scale.js"></script>
 
 </head>
 
