--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -295,8 +295,8 @@
                                     var N = [...new Set(cvalues)].length;
                                     console.log(N);
                                     var color = d3.scaleOrdinal()
-                                        .domain(cvalues)
-                                        .range(d3.schemeRainbow[N]);
+                                        .range(d3.schemeRainbow[N])
+                                        .domain(cvalues);
                                     // var color = d3.scaleOrdinal().domain(cvalues).range(d3.schemeCategory20);
                                     // var color2 = d3.scaleOrdinal().domain(cvalues).range(d3.schemeCategory20b);
                                     // console.log(color);
@@ -306,8 +306,8 @@
                                     var T = [...new Set(cvalues)].length;
                                     // console.log(T);
                                     var color = d3.scaleSequential()
-                                        .domain(cvalues)
-                                        .range(d3.schemeRdBu[T]);
+                                        .range(d3.schemeRdBu[T])
+                                        .domain(cvalues);
                                     console.log(color(1));
                                     console.log(color(2));
                                     console.log(color(0));
