--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -294,9 +294,7 @@
                                 case "label":
                                     var N = [...new Set(cvalues)].length;
                                     console.log(N);
-                                    var color = d3.scaleOrdinal()
-                                        .range(d3.schemeRainbow[N])
-                                        .domain(cvalues);
+                                    var color = d3.scaleOrdinal(cvalues, d3.schemeRainbow[N]);
                                     // var color = d3.scaleOrdinal().domain(cvalues).range(d3.schemeCategory20);
                                     // var color2 = d3.scaleOrdinal().domain(cvalues).range(d3.schemeCategory20b);
                                     // console.log(color);
@@ -305,9 +303,7 @@
                                 case "time":
                                     var T = [...new Set(cvalues)].length;
                                     // console.log(T);
-                                    var color = d3.scaleSequential()
-                                        .range(d3.schemeRdBu[T])
-                                        .domain(cvalues);
+                                    var color = d3.scaleSequential(cvalues, d3.schemeRdBu[T]);
                                     console.log(color(1));
                                     console.log(color(2));
                                     console.log(color(0));
