[DBG] external import as d3Chromatic

--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -244,6 +244,10 @@
                 <div id="graph"></div>
 
                 <script>
+
+                    import * as d3 from 'd3';
+                    import * as d3Chromatic from 'd3-scale-chromatic';
+                    
                     // dummyGraph();
                     drawPlots();
 
@@ -294,7 +298,7 @@
                                 case "label":
                                     var N = [...new Set(cvalues)].length;
                                     console.log(N);
-                                    var color = d3.scaleOrdinal(d3.schemeSpectral[N]).domain(cvalues);
+                                    var color = d3.scaleOrdinal(d3Chromatic.schemeSpectral[N]).domain(cvalues);
                                     // var color = d3.scaleOrdinal().domain(cvalues).range(d3.schemeCategory20);
                                     // var color2 = d3.scaleOrdinal().domain(cvalues).range(d3.schemeCategory20b);
                                     // console.log(color);
@@ -303,7 +307,7 @@
                                 case "time":
                                     var T = [...new Set(cvalues)].length;
                                     // console.log(T);
-                                    var color = d3.scaleSequential(d3.schemeRdBu[T]).domain(cvalues);
+                                    var color = d3.scaleSequential(d3Chromatic.schemeRdBu[T]).domain(cvalues);
                                     console.log(color(1));
                                     console.log(color(2));
                                     console.log(color(0));
