[DBG] fix import path

--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -245,9 +245,9 @@
 
                 <script>
 
-                    import * as d3 from 'd3';
-                    import * as d3Chromatic from 'd3-scale-chromatic';
-                    
+                    import * as d3 from '../js/d3';
+                    import * as d3Chromatic from '../js/d3-scale-chromatic';
+
                     // dummyGraph();
                     drawPlots();
 
