[DBG] make main script module

--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -243,7 +243,7 @@
 
                 <div id="graph"></div>
 
-                <script>
+                <script  type="module">
 
                     import * as d3 from '../js/d3.js';
                     import * as d3Chromatic from '../js/d3-scale-chromatic.js';
