[DBG] make d3 and d3Chromatic nomodule

--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -19,8 +19,8 @@
     <link href="../../css/simple-line-icons.css" rel="stylesheet">
 
     <!-- <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script> -->
-    <script type="module" src="../../js/d3.js"></script>
-    <script  type="module" src="../../js/d3-scale-chromatic.js"></script>
+    <script src="../../js/d3.js"></script>
+    <script src="../../js/d3-scale-chromatic.js"></script>
 
 </head>
 
