--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Baihan Lin's personal website">
-        <meta name="author" content="Baihan Lin">
-        <title>Baihan Lin</title>
-        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
-        <link href="css/bootstrap.css" rel="stylesheet">
-        <link href="css/resume.css" rel="stylesheet">
-        <link href="css/font-awesome.css" rel="stylesheet">
-        <link href="css/devicons.css" rel="stylesheet">
-        <link href="css/simple-line-icons.css" rel="stylesheet">
+        <link rel="import" href="./html/header.html">
+        <!-- <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description" content="Baihan Lin's personal website">
+<meta name="author" content="Baihan Lin">
+<title>Baihan Lin</title>
+<link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
+<link href="css/bootstrap.css" rel="stylesheet">
+<link href="css/resume.css" rel="stylesheet">
+<link href="css/font-awesome.css" rel="stylesheet">
+<link href="css/devicons.css" rel="stylesheet">
+<link href="css/simple-line-icons.css" rel="stylesheet"> -->
     </head>
     <body id="indexpage">
         <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" id="sideNav">
