[DBG] replace PHP import with link

--- a/html/header.html
+++ b/html/header.html
@@ -13,3 +13,7 @@
 <link href="css/font-awesome.css" rel="stylesheet">
 <link href="css/devicons.css" rel="stylesheet">
 <link href="css/simple-line-icons.css" rel="stylesheet">
+
+<template>
+  ...
+</template>
