[DBG] try import external html with js

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 
 
 <!DOCTYPE html>
+<script src="../js/loadhtml.js"></script>
+
 <html lang="en">
     <head>
-        <link rel="import" href="./html/header.html">
+        <div w3-include-html="./html/header.html"></div> 
+        <!-- <link rel="import" href="./html/header.html"> -->
+<script>
+w3IncludeHTML();
+</script>
         <!-- <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Baihan Lin's personal website">
