--- a/proj/proj/index.html
+++ b/proj/proj/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<script src="../js/loadhtml.js"></script>
+<script src="../../js/loadhtml.js"></script>
 
 <html lang="en">
 
 <head>
-    <div w3-include-html="./html/header.html"></div>
+    <div w3-include-html="../../html/header.html"></div>
     <script>
         w3IncludeHTML();
     </script>
 </head>
 
 <body>
-    <div w3-include-html="./html/navleft.html"></div>
-    <div w3-include-html="./html/navright.html"></div>
+    <div w3-include-html="../../html/navleft.html"></div>
+    <div w3-include-html="../../html/navright.html"></div>
 
     <div class="container-fluid p-0">
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="">
