--- a/html/header.html
+++ b/html/header.html
@@ -8,8 +8,8 @@
 <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="css/resume.css" rel="stylesheet">
-<link href="css/font-awesome.css" rel="stylesheet">
-<link href="css/devicons.css" rel="stylesheet">
-<link href="css/simple-line-icons.css" rel="stylesheet">
+<link href="https://www.baihan.nyc/css/bootstrap.css" rel="stylesheet">
+<link href="https://www.baihan.nyc/css/resume.css" rel="stylesheet">
+<link href="https://www.baihan.nyc/css/font-awesome.css" rel="stylesheet">
+<link href="https://www.baihan.nyc/css/devicons.css" rel="stylesheet">
+<link href="https://www.baihan.nyc/css/simple-line-icons.css" rel="stylesheet">
